@@ -5,6 +5,8 @@ tag = False
 
 [bumpversion:file:main.go]
 
+[bumpversion:file:resources/onedriver.1]
+
 [bumpversion:file:onedriver.spec]
 search = Version:       {current_version}
 replace = Version:       {new_version}
