@@ -42,4 +42,3 @@ debian/files
 *.build*
 *.upload
 *.tar.xz
-
