@@ -15,6 +15,7 @@ override_dh_auto_clean:
 override_dh_auto_build:
 	# GOCACHE will be for a nonexistent user in pbuilder otherwise
 	GOCACHE=/tmp/go-cache go build -mod=vendor -ldflags="-X main.commit=$(shell cat .commit)"
+	gzip resources/onedriver.1
 
 
 override_dh_auto_install:
@@ -24,4 +25,5 @@ override_dh_auto_install:
 	install -D -m 0644 resources/onedriver.svg $$(pwd)/debian/onedriver/usr/share/icons/onedriver/onedriver.svg
 	install -D -m 0644 resources/onedriver.desktop $$(pwd)/debian/onedriver/usr/share/applications/onedriver.desktop
 	install -D -m 0644 resources/onedriver@.service $$(pwd)/debian/onedriver/usr/lib/systemd/user/onedriver@.service
+	install -D -m 0644 resources/onedriver.1.gz $$(pwd)/debian/onedriver/usr/share/man/man1/onedriver.1.gz
 
